# src-auth-perms-sync

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.jsonc  AGENTS.md  LICENSE  README.md  SECURITY.md  maps-example.yaml  package-lock.json  package.json  pyproject.toml  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  validate.yml
auth_perms_sync/: __init__.py  __main__.py  cli.py
auth_perms_sync/orgs/: __init__.py  command.py  sync.py
auth_perms_sync/permissions/: command.py  full_set.py  mapping.py  maps.py  workflow.py
auth_perms_sync/shared/: __init__.py  backups.py  id_codec.py  queries.py  saml_groups.py  site_config.py  types.py
dev/: PLAN.md  TODO.md  analyze-memory.py  audit-dead-code.md  check-src-py-lib-subtree.sh  dead-code-audit.md  engineering-requests.md  git-worktrees.md  mapping-efficiency.md  memory-efficiency-analyze.py  memory-efficiency-generate.py  memory-efficiency-monitor-sourcegraph.sh  memory-efficiency.md  monitor-sourcegraph-load.sh  python-versions.md  run-memory-model-sweep.py  sourcegraph-explicit-permissions-tracing.md  test-cli-pypi-install.sh  test-command-permutations.py  test-end-to-end.py  test-fixture-cases.py  test-memory-efficiency-server-load.sh  test-memory-efficiency.md  test-memory-efficiency.py  test-plan.md  update-python-versions.md
dev/hooks/: pre-commit
dev/memory-analysis/: mapping-efficiency.md  memory-efficiency-analyze.py  memory-efficiency-generate.py  memory-efficiency-monitor-sourcegraph.sh  memory-efficiency.md
examples/: import.py  maps.yaml
git-subtree/src-py-lib/: .gitignore  .markdownlint-cli2.yaml  AGENTS.md  README.md  pyproject.toml  renovate.json
git-subtree/src-py-lib/.github/workflows/: ci.yml  release.yml
git-subtree/src-py-lib/src/src_py_lib/: __init__.py
git-subtree/src-py-lib/src/src_py_lib/clients/: __init__.py  github.py  google_sheets.py  graphql.py  linear.py  one_password.py  slack.py  sourcegraph.py
git-subtree/src-py-lib/src/src_py_lib/utils/: __init__.py  config.py  http.py  json_cache.py  json_types.py  logging.py  tsv.py
git-subtree/src-py-lib/tests/: test_import.py  test_logging_http_clients.py  test_tsv.py
src/src_auth_perms_sync/: __init__.py  __main__.py  cli.py
src/src_auth_perms_sync/orgs/: command.py  queries.py  sync.py  types.py
src/src_auth_perms_sync/permissions/: apply.py  command.py  full_set.py  mapping.py  maps.py  queries.py  restore.py  snapshot.py  sourcegraph.py  types.py  workflow.py
src/src_auth_perms_sync/shared/: backups.py  queries.py  run_context.py  saml_groups.py  site_config.py  sourcegraph.py  types.py
src_auth_perms_sync/: cli.py
src_auth_perms_sync/orgs/: types.py
src_auth_perms_sync/permissions/: __init__.py  command.py  full_set.py  mapping.py  maps.py  restore.py  snapshot.py  sourcegraph.py  types.py
src_auth_perms_sync/shared/: run_context.py  sourcegraph.py  types.py
tests/: README.md  __init__.py  confusables.py  live-maps-seed.yaml  run.py  setup.py  setup.yaml  tests.yaml  unicode_scan.py
tests/e2e/: __init__.py  case_runner.py  test_local_cases.py  test_permission_fixture_cases.py
tests/e2e/fixtures/add-users-by-email-and-list/: after.json  before.json  maps.yaml
tests/e2e/fixtures/add-users-preserves-existing/: after.json  before.json  case.json  maps.yaml
tests/e2e/fixtures/and-filters-intersect/: after.json  before.json  maps.yaml
tests/e2e/fixtures/empty-maps-noop/: maps.yaml
tests/e2e/fixtures/full-overwrite-dry-run/: before.json
tests/e2e/fixtures/full-overwrite-preserves-pending/: after.json  before.json  maps.yaml
tests/e2e/fixtures/full-overwrite-removes-stale-grant/: after.json  before.json
tests/e2e/fixtures/full-overwrite-unions/: after.json  before.json  case.json  maps.yaml
tests/e2e/fixtures/full-overwrite-with-backup/: after.json  before.json  maps.yaml
tests/e2e/fixtures/get-full-snapshot/: before.json
tests/e2e/fixtures/get-repos-without-explicit-perms/: before.json
tests/e2e/fixtures/get-user-grants/: before.json
tests/e2e/fixtures/invalid-bad-regex/: maps.yaml
tests/e2e/fixtures/invalid-missing-repos-section/: maps.yaml
tests/e2e/fixtures/invalid-restore-wrong-schema-version/: snapshot.json
tests/e2e/fixtures/invalid-set-created-after-date/: before.json
tests/e2e/fixtures/invalid-set-unknown-repo/: before.json
tests/e2e/fixtures/invalid-set-unknown-user/: before.json  maps.yaml
tests/e2e/fixtures/invalid-set-users-created-after-date/: maps.yaml
tests/e2e/fixtures/invalid-unknown-selector-field/: maps.yaml
tests/e2e/fixtures/match-provider-and-host-fields/: after.json  before.json  maps.yaml
tests/e2e/fixtures/no-match-noop/: maps.yaml
tests/e2e/fixtures/regex-filters-scope/: after.json  before.json  maps.yaml
tests/e2e/fixtures/restore-applies-snapshot/: after.json  before.json
tests/e2e/fixtures/restore-dry-run-noop/: before.json  snapshot.json
tests/e2e/fixtures/restore-missing-file/: before.json
tests/integration/: __init__.py  test_cli_entrypoint.py
tests/unit/: __init__.py  test_apply.py  test_backups.py  test_cli_config.py  test_command_additive.py  test_command_files.py  test_confusables.py  test_id_codec.py  test_mapping_rules.py  test_maps.py  test_module_api.py  test_permissions_sourcegraph.py  test_restore.py  test_saml_groups.py  test_snapshot.py  test_unicode_scan.py
(+43 files in other folders)
