[project]
name = "auth-perms-sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "json5>=0.14.0",
    "pyyaml>=6.0.3",
    "src-py-lib",
]

[project.scripts]
auth-perms-sync = "auth_perms_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["auth_perms_sync"]

[tool.uv]
package = true

[tool.uv.sources]
src-py-lib = { path = "git-subtree/src-py-lib" }

[tool.pyright]
include = ["auth_perms_sync"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
# Slightly above the default 88 — accommodates the YAML-header literal in
# permissions/maps.py and a few log-message strings without sacrificing readability.
line-length = 100

[tool.ruff.lint]
# E = pycodestyle, F = pyflakes (unused imports, undefined names),
# I = import sorting, B = bugbear (likely-bug patterns),
# UP = pyupgrade (modernise syntax for py311),
# SIM = simplify (collapse trivial constructs).
select = ["E", "F", "I", "B", "UP", "SIM"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.15.14",
    "types-pyyaml>=6.0.12.20260518",
]
