[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "ruff>=0.15.20",
    "types-pyyaml>=6.0.12.20260518",
]

[project]
name = "src-auth-perms-sync"
dynamic = ["version"]
description = "Set Sourcegraph permissions from authentication provider data"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name="Sourcegraph" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "json5>=0.15.0",
    "pyyaml>=6.0.3",
    "src-py-lib[otel]==0.3.2",
]
keywords = [
    "Sourcegraph"
]

[project.scripts]
src-auth-perms-sync = "src_auth_perms_sync.cli:main"

[project.urls]
Homepage = "https://github.com/sourcegraph/src-auth-perms-sync"
Issues = "https://github.com/sourcegraph/src-auth-perms-sync/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/src_auth_perms_sync"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
include = ["src", "tests", "dev"]
exclude = ["src-auth-perms-sync-runs", ".venv", "build", "dist"]
typeCheckingMode = "strict"
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["src-auth-perms-sync-runs"]

[tool.ruff.lint]
# tests/unicode_scan.py bans non-ASCII characters in tracked text files.
select = ["E", "F", "I", "B", "UP", "SIM", "RUF001", "RUF002", "RUF003"]

[tool.uv]
package = true
