[project]
name = "src-py-lib"
version = "0.1.0"
description = "Reusable Python helpers for Python projects."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2,<3",
    "python-dotenv>=1.2,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/src_py_lib"]

[tool.uv]
package = true

[tool.pyright]
include = ["src/src_py_lib"]
typeCheckingMode = "strict"
extraPaths = ["src"]
pythonVersion = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "ruff>=0.7.0",
]
